--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "react-apollo": "^2.1.5",
+    "react-measure": "^2.0.2",
     "react-vis": "^1.9.4",
     "webpack": "^4.12.0"
   },
@@ -22,6 +23,7 @@
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-svg-loader": "^2.1.0",
     "style-loader": "^0.21.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4"
